# rustic-ai

./: .dockerignore  .gitignore  .test_session_pid  404.html  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV.md  Dockerfile  README.md  conftest.py  contributing.html  index.html  mkdocs.yml  objects.inv  paper.html  pydoc-markdown.yml  pyproject.toml  tox.ini
api/: README.md  index.html  pyproject.toml  tox.ini
api/scripts/: debug_server.sh  debug_server_with_otel.sh  dev_server.sh  dev_server_with_otel.sh
api/scripts/zipkin/: docker-compose.yml  zipkin_down.sh  zipkin_up.sh
api/scripts/zipkin/config/: otel-collector-zipkin-config.yaml
api/src/rustic_ai/api_server/: api_dependency_manager.py  main.py  main_debug.py
api/tests/: conftest.py
api/tests/addons/boards/: test_board_apis.py
api/tests/boards/: test_boards.py
api/tests/catalog/: test_agent_apis.py  test_agent_store.py  test_blueprint_apis.py  test_blueprint_store.py  test_blueprint_with_vars.py
api/tests/guilds/: test_create_guild.py  test_get_guild.py  test_historical_messages.py  test_update_guild.py
cookiecutter-rustic/{{cookiecutter.module_name}}/: pyproject.toml  tox.ini
core/: README.md  agents.html  architecture.html  dependencies.html  embedded_messaging_backend.html  execution.html  guilds.html  index.html  messaging.html  multiprocess_execution.html  pyproject.toml  state_management.html  tox.ini
core/agents/: index.html
core/architecture/: index.html
core/dependencies/: index.html
core/embedded_messaging_backend/: index.html
core/execution/: index.html
core/g2g/: index.html
core/guilds/: index.html
core/messaging/: index.html
core/messaging_lifecycle/: index.html
core/multiprocess_execution/: index.html
core/src/rustic_ai/core/: __init__.py
core/state_management/: index.html
core/tests/: conftest.py  guild_management_test.py  helpers.py  soft_delete_test.py  test_modular_guild_loading.py
core/tests/agents/: test_aggregating_agent.py  test_knowledge_agent.py  test_splitter_agent.py  test_todo_agent.py  test_todolist_agent.py
core/tests/guild/: sample_agents.py  simple_agent.py  test_agent.py  test_agent_tagging.py  test_agent_with_fixtures.py  test_guild.py  test_guild_builder.py  test_guild_builder_with_config.py  test_guild_message.py  test_guild_stop.py  test_llm_prompt_loading.py  test_metaclass.py  test_route_builder.py  test_spec_build.py
core/tests/guild/dsl/: test_agent_spec.py  test_guild_spec.py
core/tests/guild/execution/: __init__.py  test_agent_wrapper.py  test_process_manager.py
core/tests/knowledgebase/: test_chunkers_attach_write.py  test_embedders.py  test_embedders_and_projectors_bytes_sources.py  test_helpers.py  test_kb_helpers.py  test_kbindex_backend_memory.py  test_knol_manager.py  test_knol_utils_chunks.py  test_knowledge_base.py  test_media_chunkers.py  test_other_chunkers.py  test_pipeline_and_config.py  test_pipeline_executor.py  test_projectors.py  test_schema.py  test_schema_infer.py  test_simple_text_chunker.py
core/tests/utils/: test_cel_expr.py  test_class_utils.py  test_gemstone_id.py  test_guild_cel.py  test_jsonata_builder.py  test_jxscript.py
huggingface/: README.md  pyproject.toml  tox.ini
lancedb/: README.md  pyproject.toml
lancedb/tests/: test_kbindex_backend_lancedb.py  test_kbindex_backend_lancedb_filesystem.py  test_knowledge_agent_lancedb.py
llm-agent/: README.md  pyproject.toml  tox.ini
llm-agent/tests/: conftest.py  test_memories_stores.py
llm-agent/tests/agent/: test_basic_llm_agent.py  test_dynamic_prompt_llm_agent.py  test_knowledge_memories_store.py  test_llm_utils.py  test_memories_stores.py  test_memory_llm_agent.py  test_plugin_dependency_injection.py  test_structured_output_plugin.py  test_tools_manager_plugin.py  test_tools_provider.py
llm-agent/tests/react/: __init__.py  test_python_orchestrator.py  test_react_agent.py  test_react_agent_integration.py  test_react_agent_plugins.py
marvin/: README.md  pyproject.toml
marvin/tests/agent/: test_marvin_agent.py
ray/: README.md  index.html  pyproject.toml
redis/: README.md  pyproject.toml  tox.ini
redis/tests/agent_ext/: test_redis_kvstore.py
redis/tests/messaging/: test_messaging_redis.py  test_redis_backend.py
redis/tests/state/: test_redis_state_mgr.py
serpapi/: README.md  pyproject.toml  tox.ini
serpapi/tests/agent/: test_serp_agent.py
showcase/: README.md  index.html  pyproject.toml
showcase/apps/: debate_simulator.json  debate_simulator_blueprint.json  guild_generator_blueprint.json  llm_council.json  multi_llm_blueprint.json  paper_banana_guild.json  personal_workspace.json  react_data_analyst.json  react_data_analyst_guild.json  researcher.json  semantic_memory_assistant.json  todo_guild.json  ui_component_blueprint.json  ui_component_guild.json  unidb_assistant.json  vending_bench_guild.json  vending_bench_player_guild.json
showcase/apps/iterative_studio/: README.md  guild.json  iterative_studio.json  sample_messages.md
showcase/tests/guild_generator/: __init__.py  test_async_transformation_e2e.py  test_guild_generator.py  test_guild_generator_agents.py  test_guild_overview.py  test_route_builder_filtering.py
showcase/tests/iterative_studio/: __init__.py  test_iterative_studio_e2e.py  test_iterative_studio_guild.py
showcase/tests/laira/: test_research_guild.py
showcase/tests/ui_components/: test_ui_component_blueprint.py  test_ui_components_guild.py
showcase/tests/unidb/: __init__.py  test_unidb_assistant.py
showcase/tests/vending_bench/: __init__.py  conftest.py  test_customer_complaint_agent.py  test_g2g_integration.py  test_llm_agent_flow.py  test_messages.py  test_player_toolset.py  test_simulation_flow.py  test_status_tracker_agent.py  test_supplier_discovery_agent.py  test_supplier_messages.py  test_supplier_registry.py  test_supplier_simulator_agent.py  test_vending_machine_agent.py
skills/: README.md  index.html  pyproject.toml  tox.ini
skills/tests/: __init__.py  conftest.py  test_executor.py  test_marketplace.py  test_models.py  test_parser.py  test_toolset.py
(+830 files in other folders)
