[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rusticai-python-framework"
description = "Monorepo for Rustic AI Python Packages"
authors = ["Dragonscale Industries Inc. <dev@dragonscale.ai>"]
readme = "README.md"
homepage = "https://www.rustic.ai/"
repository = "https://github.com/rustic-ai/python-framework"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
rusticai-core = { path = "./core", develop = true }
rusticai-redis = { path = "./redis", develop = true }
rusticai-ray = { path = "./ray", develop = true }
rusticai-api = { path = "./api", develop = true }
rusticai-litellm = { path = "./litellm", develop = true }
rusticai-chroma = { path = "./chroma", develop = true }
rusticai-marvin = { path = "./marvin", develop = true }
rusticai-serpapi = { path = "./serpapi", develop = true }
rusticai-playwright = { path = "./playwright", develop = true }
rusticai-huggingface = { path = "./huggingface", develop = true }
rusticai-langchain = { path = "./langchain", develop = true }
rusticai-showcase = { path = "./showcase", develop = true }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = { version = "^24.2.0", extras = ["jupyter"] }
flake8 = "^7.1.2"
tox = "^4.24.1"
isort = "^6.0.0"
mypy = "^1.15.0"
coverage = "^7.6.12"
cookiecutter = "^2.6.0"
tomlkit = "^0.13.2"
# redis dev dependencies
fakeredis = "^2.27.0"
types-redis = "^4.6.0.20241004"
# api-server dev dependencies
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"
flaky = "^3.8.1"
rusticai-testing = {path = "./testing", develop = true}


[tool.poetry.extras]
test = ["pytest", "pytest-asyncio", "fakeredis", "httpx", "flaky", "rusticai-testing"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '(\\.pyi?$|.*/src/|.*/tests/|it/)'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  |__pycache__
  | resources/*
)/
'''

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
plugins = "pydantic.mypy"
explicit_package_bases = true
exclude = ["^\\.venv/", "^cache/", "cookiecutter-rustic/"]


[tool.isort]
profile = "black"
known_third_party = ["pydantic"]
known_first_party = [
    "rustic_ai.core",
    "rustic_ai.redis",
    "rustic_ai.ray",
    "rustic_ai.api_server",
    "rustic_ai.litellm",
    "rustic_ai.chroma",
    "rustic_ai.marvin",
    "rustic_ai.serpapi",
    "rustic_ai.playwright",
    "rustic_ai.huggingface",
    "rustic_ai.langchain",
    "rustic_ai.showcase",
]
known_local_folder = ["core", "rustic_ai.testing"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="function"
norecursedirs = ["cookiecutter-rustic"]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
