[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rusticai-core"
version = "1.1.0"
description = "Rustic AI’s modular, agentic AI framework for building human-centered, multi-agent workflows"
authors = [{name = "Dragonscale Industries Inc.", email = "dev@dragonscale.ai"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
urls = { Homepage = "https://www.rustic.ai/", Repository = "https://github.com/rustic-ai/rustic-ai" }
dependencies = ["pydantic>=2.10.6,<3.0.0", "shortuuid>=1.0.13,<2.0.0", "types-python-dateutil>=2.9.0.20241003,<3.0.0", "pyyaml>=6.0.1,<7.0.0", "jsonata-python>=0.5.2,<0.6.0", "fsspec>=2024.12.0,<2025.0.0", "jsonpath-ng>=1.7.0,<2.0.0", "json-merge-patch>=0.2,<0.3.0", "sqlmodel>=0.0.22,<0.0.23", "types-pyyaml>=6.0.12.20241230,<7.0.0", "aiohttp>=3.11.14,<4.0.0", "jsonpatch>=1.33,<2.0.0", "sympy>=1.13.3,<2.0.0", "python-dateutil>=2.9.0.post0,<3.0.0", "opentelemetry-api>=1.31.1,<2.0.0", "chevron>=0.14.0,<0.15.0", "cel-python>=0.4.0,<0.5.0", "apscheduler>=3.11.0,<4.0.0"]



[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | resources/*
)/
'''

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
plugins = "pydantic.mypy"
explicit_package_bases = true

[tool.isort]
profile = "black"
force_sort_within_sections = true # For the sorting order issues
lines_between_sections = 1 # For the newline issue
known_third_party = ["pydantic"]
known_first_party = ["rustic_ai.core"]
known_local_folder = ["core"]

[tool.hatch.build.targets.wheel]
packages = ["src/rustic_ai"]
[dependency-groups]
dev = ["pytest>=8.3.4", "black>=24.2.0", "flake8>=7.1.2", "tox>=4.24.1", "isort>=6.0.0", "mypy>=1.15.0", "flaky>=3.8.1,<4.0.0", "pytest-asyncio>=0.25.3"]
