[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rusticai-huggingface"
version = "1.1.0"
description = "Rustic AI module with huggingface integrations"
authors = [{name = "Dragonscale Industries Inc.", email = "dev@dragonscale.ai"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
urls = { Homepage = "https://www.rustic.ai/", Repository = "https://github.com/rustic-ai/rustic-ai", "Rustic AI Core" = "https://pypi.org/project/rusticai-core/" }
dependencies = ["rusticai-core", "torch>=2.4.0,<3.0.0; sys_platform == 'darwin'", "torch>=2.4.0,<3.0.0; sys_platform == 'linux'", "transformers>=4.51.2,<5.0.0", "datasets>=3.5.0,<4.0.0", "soundfile>=0.13.1,<0.14.0", "sentencepiece>=0.2.0,<0.3.0", "diffusers>=0.33.1,<0.34.0", "protobuf>=5,<6.0.0", "pillow>=11.2.1,<12.0.0", "sentence-transformers>=4.1.0,<5.0.0"]


[tool.poetry-monorepo.deps]


[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
plugins = "pydantic.mypy"
explicit_package_bases = true


[tool.isort]
profile = "black"
force_sort_within_sections = true # For the sorting order issues
lines_between_sections = 1 # For the newline issue
known_third_party = ["pydantic"]
known_first_party = ["rustic_ai.core", "rustic_ai.huggingface"]


[tool.uv.sources.rusticai-core]
workspace = true


[tool.hatch.build.targets.wheel]
packages = ["src/rustic_ai"]
[dependency-groups]
dev = ["pytest>=8.3.4", "black>=24.2.0", "flake8>=7.1.2", "tox>=4.24.1", "isort>=6.0.0", "mypy>=1.15.0"]
