[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rusticai-lancedb"
version = "1.1.0"
description = "Support for LanceDB backend KnowledgeBase"
authors = [{name = "Dragonscale Industries Inc.", email = "dev@dragonscale.ai"}]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
urls = { Homepage = "https://www.rustic.ai/", Repository = "https://github.com/dragonscale-ai/rustic-ai", "Rustic AI Core" = "https://pypi.org/project/rusticai-core/" }
dependencies = ["rusticai-core", "lancedb>=0.25.0,<0.26.0"]


[tool.poetry-monorepo.deps]


[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
plugins = "pydantic.mypy"
explicit_package_bases = true


[tool.isort]
profile = "black"
force_sort_within_sections = true # For the sorting order issues
lines_between_sections = 1 # For the newline issue
known_third_party = ["pydantic"]
known_first_party = ["rustic_ai.core"]

[tool.uv.sources.rusticai-core]
workspace = true

[tool.uv.sources.rusticai-testing]
workspace = true


[tool.hatch.build.targets.wheel]
packages = ["src/rustic_ai"]
[dependency-groups]
dev = ["pytest>=8.3.4", "black>=24.2.0", "flake8>=7.1.2", "tox>=4.24.1", "isort>=6.0.0", "mypy>=1.15.0", "flaky>=3.8.1,<4.0.0", "pytest-asyncio>=0.25.3", "rusticai-testing"]
